# IoT

Lab1/: CMakeLists.txt  main.cpp
Lab1/Libraries/: CMakeLists.txt  LibOne.cpp  LibOne.hpp  LibTwo.cpp  LibTwo.hpp
Lab2/HTTP/: CMakeLists.txt  client.cpp  server.cpp
Lab2/TCP/: client.cpp
Lab2/UDP/: client.cpp  server.cpp
Lab3/: CMakeLists.txt  client.cpp  server.cpp
Lab4/: CMakeLists.txt  client.cpp  rsa.cpp  rsa_time.cpp  server.cpp
Lab4PY/: client.py  rsa.py  server.py
Lab5/: CMakeLists.txt  client.cpp  server.cpp
Lab5PY/: server.py
